# statistics

./: CMakeLists.txt  main.cpp  statistic_max.cpp  statistic_mean.cpp  statistic_std.cpp  statistics.h
stat/: CMakeLists.txt  statistic_max.cpp  statistic_mean.cpp  statistic_min.cpp  statistics.h
